--- a/lecture.html
+++ b/lecture.html
@@ -62,7 +62,7 @@
 	
 	<p> <b>理工学基礎実験A</b> </p>
 	2021--present <br>
-	理工学部システムデザイン工学科 2年春/秋<br>
+	理工学部 2年春/秋<br>
 	(春) 応力およびひずみの測定<br>
 	(秋) 金属の切削<br>
 	(秋) 応力およびひずみの測定<br><br>
