--- a/members.html
+++ b/members.html
@@ -40,7 +40,7 @@
 	    </li>
 	    <li><a href="https://scrapbox.io/isakarilab-public/目次"><strong>研究内容</strong><span>Studies</span></a></li>
 	    <li>
-	      <a href="index.html"><strong>業績</strong><span>Publications</span></a>
+	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
 	    <li><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
 	    <li><a href="contact.html"><strong>連絡先・アクセス</strong><span>Contacts・Directions</span></a></li>
@@ -55,15 +55,18 @@
 	<b>教員</b>
 	<br> <a href="isakari.html">飯盛浩司</a>
 	<br>
-	<b>D3</b>
+	<br><b>D3</b>
 	<br> (名大) 松島慶 (日本学術振興会特別研究員DC1)
 	<br> (名大) Qin Jincheng
+	<br>
 	<br><b>M2</b>
 	<br> (名大) 高木遼
 	<br> (名大) Zhou Bowen
+	<br>
 	<br><b>M1</b>
 	<br> (名大) 本宿裕太
 	<br> (名大) 中嶋利名
+	<br>
 	<br><b>B4</b>
 	<br> 宮澤圭
 	<br> 丸山意生
@@ -72,14 +75,42 @@
 	<br>
 	<h3 class="heading"> 過去のメンバー <br>alumni </h3>
 	<ol>
-	  <b>2019年度M修了(名大)</b> 永井勇毅　(日立建機株式会社), Sinpeng Songglod (Eastern Economic Corridor Office of Thailand), 鈴木淳仁 (日産自動車株式会社) <br>
-	  <b>2018年度D修了(名大)</b> 中本謙太 (日本学術振興会特別研究員PD) <br>
-	  <b>2017年度M修了(名大)</b> 釜堀瑞生 (トヨタ自動車株式会社), 松田祐輔 (アイシン精機株式会社) <br>
-	  <b>2016年度M修了(名大)</b> 花田萌美 (株式会社IHI), 杉原宗一郎 (東洋エンジニアリング株式会社), 吉光一 (株式会社デンソー)<br>
-	  <b>2015年度M修了(名大)</b> 近藤豊大 (株式会社豊田自動織機), 木村真也 (スズキ株式会社), 北林達也 (トヨタ自動車株式会社)<br>
-	  <b>2014年度M修了(名大)</b> 阿部文昌 (JFEスチール株式会社), 古屋貴啓 (トヨタ自動車株式会社)<br>
-	  <b>2013年度M修了(名大)</b> 興梠洋一 (株式会社デンソー), 渡邊勇人 (アイシン・エィ・ダブリュ株式会社)<br>
-	  <b>2012年度M修了(名大)</b> 栗山公平 (トヨタ車体株式会社)
+	  <b>2020年度M修了(名大)</b><br>
+	  中島寛也 (ユミルリンク株式会社)<br>
+	  山本遼 (パナソニック株式会社) <br>
+	  <br>
+	  <b>2019年度M修了(名大)</b><br>
+	  永井勇毅 (日立建機株式会社)<br>
+	  Sinpeng Songglod (Eastern Economic Corridor Office of Thailand)<br>
+	  鈴木淳仁 (日産自動車株式会社) <br>
+	  <br>
+	  <b>2018年度D修了(名大)</b><br>
+	  中本謙太 (日本学術振興会特別研究員PD)<br>
+	  <br>
+	  <b>2017年度M修了(名大)</b><br>
+	  釜堀瑞生 (トヨタ自動車株式会社)<br>
+	  松田祐輔 (アイシン精機株式会社)<br>
+	  <br>
+	  <b>2016年度M修了(名大)</b>
+	  花田萌美 (株式会社IHI)<br>
+	  杉原宗一郎 (東洋エンジニアリング株式会社)<br>
+	  吉光一 (株式会社デンソー)<br>
+	  <br>
+	  <b>2015年度M修了(名大)</b><br>
+	  近藤豊大 (株式会社豊田自動織機)<br>
+	  木村真也 (スズキ株式会社)<br>
+	  北林達也 (トヨタ自動車株式会社)<br>
+	  <br>
+	  <b>2014年度M修了(名大)</b><br>
+	  阿部文昌 (JFEスチール株式会社)<br>
+	  古屋貴啓 (トヨタ自動車株式会社)<br>
+	  <br>
+	  <b>2013年度M修了(名大)</b><br>
+	  興梠洋一 (株式会社デンソー)<br>
+	  渡邊勇人 (アイシン・エィ・ダブリュ株式会社)<br>
+	  <br>
+	  <b>2012年度M修了(名大)</b><br>
+	  栗山公平 (トヨタ車体株式会社)
 	</ol>
       </section>
     </div>
