--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 	    Our grant proposal has been accepted for Grant-in-Aid for Challenging Research (Exploratory).<br><br>
 
 	    2021/04/01:<br>
-	    飯盛が<a href="www.matsumoto.nuem.nagoya-u.ac.jp/jascome">日本計算数理工学会</a>の理事に就任しました.<br>
+	    飯盛が<a href="http://www.matsumoto.nuem.nagoya-u.ac.jp/jascome">日本計算数理工学会</a>の理事に就任しました.<br>
 	    Prof. Isakari is appointed as a director of Japan society for computational methods in engineering (JASCOME).<br><br>
+	    
 	    2021/04/01:<br>
 	    飯盛が<a href="http://www.sd.keio.ac.jp">慶應義塾大学理工学部システムデザイン工学科</a>に着任し, 飯盛研究室が発足しました.<br>
 	    Prof. Isakari is assinged as an assistant professor for Keio Univ., and our Lab. has just started.<br><br>
@@ -79,7 +80,7 @@
 
       </section>
 
-      <p id="copyright">Copyright(c) 2021-Present Hiroshi Isakari All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
+      <p id="copyright">Copyright(c) 2021-Present Hiroshi Isakari All Rights Reserved. Designed by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
 
   </body>
 </html>
