--- a/isakari.html
+++ b/isakari.html
@@ -62,7 +62,7 @@
       <section class="content">
 	<p><img src="images/me2.JPG" alt="" width="260" class="alignleft size-full wp-image-210">
 	  <br><br><br> 飯盛浩司 <br> Hiroshi Isakari</p><br>
-	<p>慶應義塾大学理工学部システムデザイン工学科 <br> Dept. of System Design Engineering, Faculty of Sci. and Tech., Keio Univ.</p>
+	<p>慶應義塾大学理工学部システムデザイン工学科 <br> Dept. of Sys. Desg. Eng., Faculty of Sci. and Tech., Keio Univ.</p>
         <p>専任講師 <br> assistant professor </p><br>
         <p> Hiroshi Isakari was born in Saga, Japan on the 27th September 1984. He received, from Kyoto University, his doctoral degree of engineering for "Periodic FMMs and Calderon's preconditioning in acoustics and elastodynamics" in 2012. After that, he experienced one-month  post-doc at graduate school of informatics, Kyoto University, and then got a faculty position at Nagoya University, where he spent 9 years as an assistant professor. He then moved to Keio University. His main research interests lie in computational mechanics. He especially focuses on realising advanced (=fast, reliable, and versatile) numerical methods based on boundary integral equations, and exploring its applications to "optimal" design of novel wave devices such as phononic structures, acoustic metamaterials, and so on.</p>
 	<br clear="all" /></p><br>
@@ -261,7 +261,7 @@ Engineering Analysis with Boundary Elements
 
 <div id="wrapper">
 
-  <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
+  <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Designed by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
 
 </div>
 
