--- a/lecture.html
+++ b/lecture.html
@@ -51,7 +51,7 @@
 
     <div id="wrapper">
       <section class="content">
-	<h3 class="heading"> 学部 <br> undergraduate courses</h3>
+	<h3 class="heading"> 学部 <br> Undergraduate courses</h3>
 	<p> <b>力学的アナリシス</b> </p>
 	2021--present <br>
 	理工学部システムデザイン工学科 2年秋<br><br>
@@ -67,7 +67,7 @@
 	(秋) 金属の切削<br>
 	(秋) 応力およびひずみの測定<br><br>
 	
-	<h3 class="heading"> 大学院 <br> graduate courses</h3>
+	<h3 class="heading"> 大学院 <br> Graduate courses</h3>
 
 	<p> <b>計算固体力学</b> </p>
 	2021--present <br>
@@ -82,7 +82,7 @@
     
     <div id="wrapper">
 
-      <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
+      <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Designed by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
 
     </div>
 
