--- a/members.html
+++ b/members.html
@@ -51,7 +51,7 @@
 
     <div id="wrapper">
       <section class="content">
-	<h3 class="heading"> 現在のメンバー <br>current members</h3>
+	<h3 class="heading"> 現在のメンバー <br>Current members</h3>
 	<b>教員</b>
 	<br> <a href="isakari.html">飯盛浩司</a>
 	<br>
@@ -73,7 +73,7 @@
 	<br> 川端展人
 	<br>
 	<br>
-	<h3 class="heading"> 過去のメンバー <br>alumni </h3>
+	<h3 class="heading"> 過去のメンバー <br>Alumni </h3>
 	<ol>
 	  <b>2020年度M修了(名大)</b><br>
 	  中島寛也 (ユミルリンク株式会社)<br>
@@ -117,7 +117,7 @@
     
     <div id="wrapper">
 
-      <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
+      <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Designed by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
 
     </div>
 
