--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     
     <div id="wrapper">
 
-      <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
+      <p id="copyright">Copyright(c) 2021-present Hiroshi Isakari All Rights Reserved. Designed by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a></p><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
 
     </div>
 
