--- a/isakari.html
+++ b/isakari.html
@@ -229,6 +229,10 @@
       <td width="280"> 2021年(令和3年)-現在</td>
       <td> 日本計算数理工学会 理事</td>
     </tr>
+    <tr>
+      <td width="280"> 2021年(令和3年)-2022年(令和4年)</td>
+      <td> <a href="https://www.wccm2022.org/organization.html">WCCM-APCOM2022 Local Executive Committee</a></td>
+    </tr>
 </table>
 <br>
 <br>
