--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,13 @@
 	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
 	<br>
 	<ol>
+	  <li>
+	    Takahashi T., Sato D., <b> Isakari H.</b>, and Matsumoto T.
+	    <br>
+	    "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz Equation"<br>
+	    Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a><br>
+	  </li>
+	  <br>
 	<li>
 	  Xie S., Yaji K., Takahashi T., <b> Isakari H.</b>, Yoshino M., and Matsumoto T.
 	  <br>
