--- a/isakari.html
+++ b/isakari.html
@@ -44,12 +44,7 @@
 	    </li>
 	    <li><a href="https://scrapbox.io/isakarilab-public/目次"><strong>研究内容</strong><span>Studies</span></a></li>
 	    <li>
-	      <a href="index.html"><strong>業績</strong><span>Publications</span></a>
-	      <ul class="sub-menu">
-		<li><a href="papers.html">論文<span>Papers</span></a></li>
-		<li><a href="talks.html">学会発表<span>Talks</span></a></li>
-		<li><a href="patents.html">特許<span>Patents</span></a></li>
-	      </ul>
+	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
 	    <li><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
 	    <li><a href="contact.html"><strong>連絡先・アクセス</strong><span>Contacts・Directions</span></a></li>
