--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,14 @@
 	    Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a><br>
 	  </li>
 	  <br>
-	<li>
+	  <li>
+	    飯盛浩司<br>
+	    "サンプル点における曲面の勾配を考慮したBスプライン近似に基づくレベルセットトポロジー最適化"
+	    <br>
+	    計算数理工学論文集, 第21巻, 2021(accepted).
+	  </li>
+	  <br>
+	  <li>
 	  Xie S., Yaji K., Takahashi T., <b> Isakari H.</b>, Yoshino M., and Matsumoto T.
 	  <br>
 	  "Topology optimization for incompressible viscous fluid flow using the lattice kinetic scheme" <br>
