--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,13 @@
 	  </li>
 	  <br>
 	  <li>
+	    Qin J., <b>Isakari H.</b>, Taji K, Takahashi T., and Matsumoto T.<br>
+	    "A robust topology optimisation in 2d acoustics for impedance materials using the boundary element method"
+	    <br>
+	    計算数理工学論文集, 第21巻, 2021(accepted).
+	  </li>
+	  <br>
+	  <li>
 	    飯盛浩司<br>
 	    "サンプル点における曲面の勾配を考慮したBスプライン近似に基づくレベルセットトポロジー最適化"
 	    <br>
