--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 	  <li>
 	    Takahashi T., Sato D., <b> Isakari H.</b>, and Matsumoto T.
 	    <br>
-	    "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz Equation"<br>
+	    "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation"<br>
 	    Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a><br>
 	  </li>
 	  <br>
