--- a/publications.html
+++ b/publications.html
@@ -56,6 +56,13 @@
 	<br>
 	<ol>
 	  <li>
+	    Takahashi T., Hirai T., <b> Isakari H.</b>, and Matsumoto T.
+	    <br>
+	    "An isogeometric boundary element method for three-dimensional doubly-periodic layered structures in electromagnetics"<br>
+	    accepted for publication in Engineering Analysis with Boundary Elements, <a href="https://arxiv.org/abs/2105.00853">https://arxiv.org/abs/2105.00853</a><br>
+	  </li>
+	  <br>
+	  <li>
 	    Takahashi T., Sato D., <b> Isakari H.</b>, and Matsumoto T.
 	    <br>
 	    "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation"<br>
