--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  <ul>
 	    ■ 2021/11/26:<br>
 	    名大の高橋先生、松本先生、平井君(卒業生)との<a href="https://arxiv.org/abs/2105.00853">共著論文</a>が Engineering Analysis with Boundary Elements 誌に受理されました. 平井君とパラメータ曲面について議論していた頃が懐かしいです。<br>
-	    <a href="https://arxiv.org/abs/2105.00853">Our paper</a> (w/ Profs. Takahashi and Matsumoto, Hirai-kun) has been accepted for publication in Engineering Analysis with Boundary Elements. Discussions on the parametric surface with Hirai-kun was really fruitful. Congrats!
+	    <a href="https://arxiv.org/abs/2105.00853">Our paper</a> (w/ Profs. Takahashi and Matsumoto, Hirai-kun) has been accepted for publication in Engineering Analysis with Boundary Elements. Discussions on the parametric surface with Hirai-kun were really fruitful. Congrats!
 	    <br><br>
 	    
 	    ■ 2021/11/25:<br>
