--- a/members.html
+++ b/members.html
@@ -56,7 +56,6 @@
 	<br> <a href="isakari.html">飯盛浩司</a>
 	<br>
 	<br><b>D3</b>
-	<br> (名大) 松島慶 (日本学術振興会特別研究員DC1)
 	<br> (名大) Qin Jincheng
 	<br>
 	<br><b>M2</b>
@@ -75,42 +74,44 @@
 	<br>
 	<h3 class="heading"> 過去のメンバー <br>Alumni </h3>
 	<ol>
+	  <b>2021年度D修了(名大)</b><br>
+	  <a href="https://k-matsushima-19.github.io">松島慶</a><br><br>
 	  <b>2020年度M修了(名大)</b><br>
-	  中島寛也 (ユミルリンク株式会社)<br>
-	  山本遼 (パナソニック株式会社) <br>
+	  中島寛也<br>
+	  山本遼<br>
 	  <br>
 	  <b>2019年度M修了(名大)</b><br>
-	  永井勇毅 (日立建機株式会社)<br>
-	  Sinpeng Songglod (Eastern Economic Corridor Office of Thailand)<br>
-	  鈴木淳仁 (日産自動車株式会社) <br>
+	  永井勇毅<br>
+	  Sinpeng Songglod<br>
+	  鈴木淳仁<br>
 	  <br>
 	  <b>2018年度D修了(名大)</b><br>
-	  中本謙太 (日本学術振興会特別研究員PD)<br>
+	  中本謙太<br>
 	  <br>
 	  <b>2017年度M修了(名大)</b><br>
-	  釜堀瑞生 (トヨタ自動車株式会社)<br>
-	  松田祐輔 (アイシン精機株式会社)<br>
+	  釜堀瑞生<br>
+	  松田祐輔<br>
 	  <br>
 	  <b>2016年度M修了(名大)</b>
-	  花田萌美 (株式会社IHI)<br>
-	  杉原宗一郎 (東洋エンジニアリング株式会社)<br>
-	  吉光一 (株式会社デンソー)<br>
+	  花田萌美<br>
+	  杉原宗一郎<br>
+	  吉光一<br>
 	  <br>
 	  <b>2015年度M修了(名大)</b><br>
-	  近藤豊大 (株式会社豊田自動織機)<br>
-	  木村真也 (スズキ株式会社)<br>
-	  北林達也 (トヨタ自動車株式会社)<br>
+	  近藤豊大<br>
+	  木村真也<br>
+	  北林達也<br>
 	  <br>
 	  <b>2014年度M修了(名大)</b><br>
-	  阿部文昌 (JFEスチール株式会社)<br>
-	  古屋貴啓 (トヨタ自動車株式会社)<br>
+	  阿部文昌<br>
+	  古屋貴啓<br>
 	  <br>
 	  <b>2013年度M修了(名大)</b><br>
-	  興梠洋一 (株式会社デンソー)<br>
-	  渡邊勇人 (アイシン・エィ・ダブリュ株式会社)<br>
+	  興梠洋一<br>
+	  渡邊勇人<br>
 	  <br>
 	  <b>2012年度M修了(名大)</b><br>
-	  栗山公平 (トヨタ車体株式会社)
+	  栗山公平
 	</ol>
       </section>
     </div>
