--- a/publications.html
+++ b/publications.html
@@ -73,14 +73,14 @@
 	    Qin J., <b>Isakari H.</b>, Taji K, Takahashi T., and Matsumoto T.<br>
 	    "A robust topology optimisation in 2d acoustics for impedance materials using the boundary element method"
 	    <br>
-	    計算数理工学論文集, 第21巻, 2021(accepted).
+	    <a href="http://www.matsumoto.nuem.nagoya-u.ac.jp/jascome/denshi-journal/21/21.html">計算数理工学論文集, 第21巻</a>, pp. 137-143, 2021.<br>
 	  </li>
 	  <br>
 	  <li>
 	    飯盛浩司<br>
 	    "サンプル点における曲面の勾配を考慮したBスプライン近似に基づくレベルセットトポロジー最適化"
 	    <br>
-	    計算数理工学論文集, 第21巻, 2021(accepted).
+	    <a href="http://www.matsumoto.nuem.nagoya-u.ac.jp/jascome/denshi-journal/21/21.html">計算数理工学論文集, 第21巻</a>, pp. 131-136, 2021.<br>
 	  </li>
 	  <br>
 	  <li>
