--- a/members.html
+++ b/members.html
@@ -48,7 +48,7 @@
 	</div>
       </div>
     </nav>
-
+    
     <div id="wrapper">
       <section class="content">
 	<h3 class="heading"> 現在のメンバー <br>Current members</h3>
@@ -92,7 +92,7 @@
 	  釜堀瑞生<br>
 	  松田祐輔<br>
 	  <br>
-	  <b>2016年度M修了(名大)</b>
+	  <b>2016年度M修了(名大)</b><br>
 	  花田萌美<br>
 	  杉原宗一郎<br>
 	  吉光一<br>
