--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
 	    Takahashi T., Hirai T., <b> Isakari H.</b>, and Matsumoto T.
 	    <br>
 	    "An isogeometric boundary element method for three-dimensional doubly-periodic layered structures in electromagnetics"<br>
-	    accepted for publication in Engineering Analysis with Boundary Elements, <a href="https://arxiv.org/abs/2105.00853">https://arxiv.org/abs/2105.00853</a><br>
+	    Engineering Analysis with Boundary Elements, Vol. 136, pp. 37-54, 2022, <a href="https://doi.org/10.1016/j.enganabound.2021.11.020">doi:10.1016/j.enganabound.2021.11.020</a><br>
 	  </li>
 	  <br>
 	  <li>
