--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 	<a class="menu" id="menu"><span>MENU</span></a>
 	<div class="panel">
 	  <ul>
-	    <li class="current-menu-item"><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
+	    <li><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
 	    <li>
 	      <a href="members.html"><strong>メンバー</strong><span>Members</span></a>
 	    </li>
@@ -43,7 +43,7 @@
 	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
 	    <li><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
-	    <li><a href="contact.html"><strong>連絡先・アクセス</strong><span>Contacts・Directions</span></a></li>
+	    <li  class="current-menu-item"><a href="contact.html"><strong>連絡先・アクセス</strong><span>Contacts・Directions</span></a></li>
 	  </ul>
 	</div>
       </div>
@@ -53,7 +53,7 @@
       <section class="content">
 	<h3 class="heading"> 連絡先 <br> Contacts</h3>
 	<p> 慶應義塾大学 理工学部 システムデザイン工学科 </p>
-	<p> 矢上キャンパス 14-615</p>
+	<p> 矢上キャンパス 25-219 (教員居室), 25-224 (学生居室)</p>
 	<p> mail: isakari _at_ sd.keio.ac.jp </p>
 
 	<!-- <h3 class="heading"> アクセス <br> Directions </h3> -->
