--- a/lecture.html
+++ b/lecture.html
@@ -34,7 +34,7 @@
 	<a class="menu" id="menu"><span>MENU</span></a>
 	<div class="panel">
 	  <ul>
-	    <li class="current-menu-item"><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
+	    <li><a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
 	    <li>
 	      <a href="members.html"><strong>メンバー</strong><span>Members</span></a>
 	    </li>
@@ -42,7 +42,7 @@
 	    <li>
 	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
-	    <li><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
+	    <li class="current-menu-item"><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
 	    <li><a href="contact.html"><strong>連絡先・アクセス</strong><span>Contacts・Directions</span></a></li>
 	  </ul>
 	</div>
@@ -69,9 +69,11 @@
 	
 	<h3 class="heading"> 大学院 <br> Graduate courses</h3>
 
-	<p> <b>計算固体力学</b> </p>
+	<p> <b>計算固体力学入門</b> </p>
 	2021--present <br>
-	理工学研究科 開放環境科学専攻 空間・環境デザイン工学専修<br><br>
+	理工学研究科 開放環境科学専攻 空間・環境デザイン工学専修<br>
+	Note: This course is taught in English.
+	<br><br>
 
 	<p> <b>空間・環境デザイン工学特別講義第１</b> </p>
 	2021--present <br>
