--- a/members.html
+++ b/members.html
@@ -52,30 +52,34 @@
     <div id="wrapper">
       <section class="content">
 	<h3 class="heading"> 現在のメンバー <br>Current members</h3>
+	<br>
 	<b>教員</b>
 	<br> <a href="isakari.html">飯盛浩司</a>
 	<br>
-	<br><b>D3</b>
-	<br> (名大) Qin Jincheng
-	<br>
-	<br><b>M2</b>
-	<br> (名大) 高木遼
-	<br> (名大) Zhou Bowen
-	<br>
-	<br><b>M1</b>
-	<br> (名大) 本宿裕太
-	<br> (名大) 中嶋利名
-	<br>
-	<br><b>B4</b>
-	<br> 宮澤圭
-	<br> 丸山意生
-	<br> 川端展人
-	<br>
+	<br><b>M2</b><br>
+	(名大) 本宿裕太<br>
+	(名大) 中嶋利名<br>
+	<br><b>B4</b><br>
+	利光陸<br>
+	井上友<br>
+	吉規晃弘<br>
+	宮澤圭<br>
 	<br>
 	<h3 class="heading"> 過去のメンバー <br>Alumni </h3>
+	<br>
 	<ol>
 	  <b>2021年度D修了(名大)</b><br>
-	  <a href="https://k-matsushima-19.github.io">松島慶</a><br><br>
+	  <a href="https://k-matsushima-19.github.io">松島慶</a><br>
+	  Qin Jincheng<br>
+	  <br>
+	  <b>2021年度M修了(名大)</b><br>
+	  (名大) 高木遼<br>
+	  (名大) Zhou Bowen<br>
+	  <br>
+	  <b>2020年度B卒業</b><br>
+	  丸山意生<br>
+	  川端展人<br>
+	  <br>
 	  <b>2020年度M修了(名大)</b><br>
 	  中島寛也<br>
 	  山本遼<br>
