--- a/publications.html
+++ b/publications.html
@@ -35,11 +35,13 @@
 	<div class="panel">
 	  <ul>
 	    <li> <a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
-	    <li class="current-menu-item">
+	    <li>
 	      <a href="members.html"><strong>メンバー</strong><span>Members</span></a>
 	    </li>
-	    <li><a href="https://scrapbox.io/isakarilab-public/目次"><strong>研究内容</strong><span>Studies</span></a></li>
 	    <li>
+	      <a href="https://scrapbox.io/isakarilab-public/目次"><strong>研究内容</strong><span>Studies</span></a>
+	    </li>
+	    <li class="current-menu-item">
 	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
 	    <li><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
@@ -51,10 +53,17 @@
 
     <div id="wrapper">
       <section class="content">
-	<h3 class="heading"> 最近の業績 <br> Recent publications </h3>
+	<h3 class="heading"> <b>最近の業績</b> <br> <b>Recent publications</b> </h3>
+        <br>
 	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
-	<br>
+	<br>	
 	<ol>
+	  <li>
+	    Qin J., <b> Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
+	    "A robust topology optimisation for wideband structures in acoustic-elastodynamic coupled fields"<br>
+	    Engineering Analysis with Boundary Elements, Vol. 140, pp. 544-561, 2022, <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">doi:10.1016/j.enganabound.2022.04.012</a><br>
+	  </li>
+	  <br>
 	  <li>
 	    Takahashi T., Hirai T., <b> Isakari H.</b>, and Matsumoto T.
 	    <br>
@@ -68,70 +77,28 @@
 	    "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation"<br>
 	    Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a><br>
 	  </li>
-	  <br>
-	  <li>
-	    Qin J., <b>Isakari H.</b>, Taji K, Takahashi T., and Matsumoto T.<br>
-	    "A robust topology optimisation in 2d acoustics for impedance materials using the boundary element method"
-	    <br>
-	    <a href="http://www.matsumoto.nuem.nagoya-u.ac.jp/jascome/denshi-journal/21/21.html">計算数理工学論文集, 第21巻</a>, pp. 137-143, 2021.<br>
-	  </li>
-	  <br>
-	  <li>
-	    飯盛浩司<br>
-	    "サンプル点における曲面の勾配を考慮したBスプライン近似に基づくレベルセットトポロジー最適化"
-	    <br>
-	    <a href="http://www.matsumoto.nuem.nagoya-u.ac.jp/jascome/denshi-journal/21/21.html">計算数理工学論文集, 第21巻</a>, pp. 131-136, 2021.<br>
-	  </li>
-	  <br>
-	  <li>
-	  Xie S., Yaji K., Takahashi T., <b> Isakari H.</b>, Yoshino M., and Matsumoto T.
-	  <br>
-	  "Topology optimization for incompressible viscous fluid flow using the lattice kinetic scheme" <br>
-	  Computers and Mathematics with Applications, Vol. 97, pp. 251-266, 2021, <a href="https://doi.org/10.1016/j.camwa.2021.05.032">doi:10.1016/j.camwa.2021.05.032</a><br>
-	</li>
-	<br>
-	<li>
-	  Qin J., <b>Isakari H.</b>, Taji K, Takahashi T., and Matsumoto T.<br>
-	  "A robust topology optimization for enlarging working bandwidth of acoustic devices" <br>
-	  International Journal for Numerical Methods in Engineering, Vol. 122, Issue 11, pp. 2694-2711, 2021. <a href="https://doi.org/10.1002/nme.6637">doi:10.1002/nme.6637</a> <br>
-	</li>
-	<br>
-	<li>
-	  Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
-	  "A numerical method for elastic wave scattering in multi-layered periodic media based on the scattering matrix and BEM" <br>
-	  Mechanical Engineering Journal, Vol. 8, No. 1, 20-00364, 2021, <a href="https://doi.org/10.1299/mej.20-00364">doi:10.1299/mej.20-00364</a> <br>
-	</li>
 	</ol>
 	<br>
-	完全なリストは<a href="https://isakari.github.io/papers.html">こちら</a><br>
-	See <a href="https://isakari.github.io/papers.html"> this page </a> for the complete list
-
-	<hr>
-	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference papers</b> </h2>
-	<br> 第26回計算工学講演会, 北九州国際会議場, 小倉, 2021年5月26-28日.
-	<br> 飯盛浩司, 中島寛也, 高橋徹, 松本敏郎
-	<br> "いくつかの高機能音響導波路のトポロジー最適化について"
+
+	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
+	<br>Honshuku Y. and Isakari H.
+	<br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures
 	<br>
-	<br> 第26回計算工学講演会, 北九州国際会議場, 小倉, 2021年5月26-28日.
-	<br> 松島慶, 飯盛浩司, 高橋徹, 松本敏郎
-	<br> "散乱行列を用いた外部周期系の固有値配置に関するトポロジー最適化について"
+	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
+	<br>Sato S., Takahashi T. Isakari H., and Matsumoto T.						    
+	<br>Topology optimization based on level set method of heat conduction for the heat radiation boundary condition.
 	<br>
-	<br> (invited) IUTAM-Symposium: computational methods for large-scale and complex wave problems, online, 2021年6月25-27日&7月2-4日.
-	<br> Hiroshi Isakari
-	<br> "Boundary element method for frequency-differentiated Helmholtz' equation and its applications"
+	<br>第27回計算工学講演会, にぎわい交流館AU（秋田市）およびオンライン, 2022年6月1-3日.
+	<br>中嶋利名, 本宿裕太, 飯盛浩司.
+	<br>広帯域音響デバイスのための Pade 近似を用いたロバストト ポロジー最適化.
 	<br>
-	<br> WCSMO-14 (World Congress of Structural and Multidisciplinary Optimization), online, 2021年6月13-18日.
-	<br> Kei Matsushima, Hiroshi Isakari, Toru Takahashi, Toshiro Matsumoto
-	<br> "A topology optimisation in large-scale multi-particle systems based on the scattering matrix method"
+
 	<br>
-	<br> WCSMO-14 (World Congress of Structural and Multidisciplinary Optimization), online, 2021年6月13-18日.
-	<br> J. Qin, H. Isakari, T. Takahashi, and T. Matsumoto
-	<br> "A robust topology optimisation for acoustic-elastodynamic coupled structures with broad working bandwidths"
-	<br>
-	<br>
-	完全なリストは<a href="https://isakari.github.io/talks.html">こちら</a><br>
-	See <a href="https://isakari.github.io/talks.html"> this page </a> for the complete list
+	<h3 class="heading"> <b>業績一覧</b> <br> <b>List of publications</b> </h3>
+	古いものを含む完全なリストは<a href="./hp.pdf">こちら</a><br>
+	See <a href="./hp.pdf"> this PDF</a> for the complete list of publications.
+        <br>	
       </section>
     </div>
     
