--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  <ul>
 	    ■ 2022/05/06:<br>
 	    久しぶりにホームページを更新しました。メンバーを新年度版に更新し、最近の業績を追加しました。<a href="https://doi.org/10.1016/j.enganabound.2022.04.012">広帯域トポロジー最適化とその高速化に関する論文</a>がEABEに載りました。<br>
-	    I have managed to find time to update the website. The member and publication lists are now updated to the latest version. <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">The EABE paper</a> on efficient wideband topology optimisation is now available online. Congrats, Qin-kun!
+	    I have managed to find time to update the website. The member and publication lists are updated to the latest version. <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">The EABE paper</a> on efficient wideband topology optimisation is now available online. Congrats, Qin-kun!
 	    <br>
 	    <br>
 	    ■ 2022/01/25:<br>
