--- a/members.html
+++ b/members.html
@@ -73,8 +73,8 @@
 	  Qin Jincheng<br>
 	  <br>
 	  <b>2021年度M修了(名大)</b><br>
-	  (名大) 高木遼<br>
-	  (名大) Zhou Bowen<br>
+	  高木遼<br>
+	  Zhou Bowen<br>
 	  <br>
 	  <b>2020年度B卒業</b><br>
 	  丸山意生<br>
