--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
 	  </li>
 	</ol>
 	<br>
-	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference papers</b> </h2>
+	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
 
 	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
 	<br>Honshuku Y. and Isakari H.
@@ -88,6 +88,10 @@
 	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
 	<br>Sato S., Takahashi T. Isakari H., and Matsumoto T.						    
 	<br>Topology optimization based on level set method of heat conduction for the heat radiation boundary condition.
+	<br>
+	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
+	<br>Ishida D., Takahashi T., Cui Y., Isakari H., and Matsumoto T.
+	<br> A convolutional neural network for predicting the eigenvalues of the 2D Helmholtz equation
 	<br>
 	<br>第27回計算工学講演会, にぎわい交流館AU（秋田市）およびオンライン, 2022年6月1-3日.
 	<br>中嶋利名, 本宿裕太, 飯盛浩司.
