--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="Publications">
-    <title>Members -Isakari Lab.-</title>
+    <title>Publications -Isakari Lab.-</title>
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link rel="stylesheet" type="text/css" media="all" href="style.css">
     <!--[if lt IE 9]>
