--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,22 @@
       <section class="content">
 	<h3 class="heading"> <b>最近の業績</b> <br> <b>Recent publications</b> </h3>
         <br>
+	<h2 class="heading"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
+	<br>
+	<ol>
+	  <li>
+	    Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
+	    A topology optimization of open acoustic waveguides based on a scattering matrix method,<br>
+	    2022, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
+	  </li>
+	  <br>
+	  <li>
+	  Honshuku Y. and <b>Isakari H.</b><br>
+	  A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br>
+	  2021, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
+	  </li>
+	</ol>
+        <br>
 	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
 	<br>	
 	<ol>
