honshuku paper accepted

--- a/publications.html
+++ b/publications.html
@@ -63,17 +63,17 @@
 	    A topology optimization of open acoustic waveguides based on a scattering matrix method,<br>
 	    2022, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
 	  </li>
-	  <br>
-	  <li>
-	  Honshuku Y. and <b>Isakari H.</b><br>
-	  A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br>
-	  2021, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
-	  </li>
-	</ol>
+	  </ol>
         <br>
 	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
 	<br>	
 	<ol>
+	  <li>
+	    Honshuku Y. and <b>Isakari H.</b><br>
+	    A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br>
+	    to appear in Applied Mathematical Modelling, 2022, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
+	  </li>
+	  <br>
 	  <li>
 	    Qin J., <b> Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
 	    "A robust topology optimisation for wideband structures in acoustic-elastodynamic coupled fields"<br>
