matsushima paper accepted

--- a/publications.html
+++ b/publications.html
@@ -54,20 +54,26 @@
     <div id="wrapper">
       <section class="content">
 	<h3 class="heading"> <b>最近の業績</b> <br> <b>Recent publications</b> </h3>
-        <br>
-	<h2 class="heading"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
-	<br>
+        <!-- <br> -->
+	<!-- <h2 class="heading"> <b>プレプリント</b> <br> <b>Preprints</b> </h2> -->
+	<!-- <br> -->
+	<!-- <ol> -->
+	  <!-- <li> -->
+	  <!--   Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br> -->
+	  <!--   A topology optimization of open acoustic waveguides based on a scattering matrix method,<br> -->
+	  <!--   2022, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a> -->
+	  <!-- </li> -->
+	<!-- </ol> -->
+        <!-- <br> -->
+	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
+	<br>	
 	<ol>
 	  <li>
 	    Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
 	    A topology optimization of open acoustic waveguides based on a scattering matrix method,<br>
-	    2022, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
+	    to appear in Wave Motion, 2022, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
 	  </li>
-	  </ol>
-        <br>
-	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
-	<br>	
-	<ol>
+	  <br>
 	  <li>
 	    Honshuku Y. and <b>Isakari H.</b><br>
 	    A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br>
