--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
 	  <li>
 	    Honshuku Y. and <b>Isakari H.</b><br>
 	    A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br>
-	    to appear in Applied Mathematical Modelling, 2022, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
+	    Applied Mathematical Modelling, Vol. 110, pp. 819-840, 2022, <a href="https://doi.org/10.1016/j.apm.2022.06.020">doi:10.1016/j.apm.2022.06.020</a>, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
 	  </li>
 	  <br>
 	  <li>
