--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@
 	  <li>
 	    Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
 	    A topology optimization of open acoustic waveguides based on a scattering matrix method,<br>
-	    to appear in Wave Motion, 2022, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
+	    Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
 	  </li>
 	  <br>
 	  <li>
@@ -102,7 +102,18 @@
 	</ol>
 	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
-
+	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
+	<br>飯盛浩司
+	<br>scattering frequencyのトポロジー感度の境界積分表現
+	<br>
+	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
+	<br>中嶋利名, 本宿裕太, 飯盛浩司
+	<br>広帯域音響デバイスのための複数のPade近似を用いたロバ ストトポロジー最適化
+	<br>
+	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
+	<br>本宿裕太, 飯盛浩司
+	<br>Pade近似を用いた音響透過率の角周波数平均の予測とそのトポロジー導関数
+	<br>
 	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
 	<br>Honshuku Y. and Isakari H.
 	<br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures
