--- a/isakari.html
+++ b/isakari.html
@@ -228,6 +228,14 @@
       <td width="280"> 2021年(令和3年)-2022年(令和4年)</td>
       <td> <a href="https://www.wccm2022.org/organization.html">WCCM-APCOM2022 Local Executive Committee</a></td>
     </tr>
+    <tr>
+      <td width="280"> 2022年(令和4年)-2023(令和5年)</td>
+      <td> 電気情報通信学会 英文論文誌小特集編集委員会(2023-4EC) 編集委員 </td>
+    </tr>
+    <tr>
+      <td width="280"> 2022年(令和4年)-現在</td>
+      <td> 電気学会A部門編修委員 </td>
+    </tr>
 </table>
 <br>
 <br>
@@ -249,6 +257,7 @@ Engineering Analysis with Boundary Elements
 <br> Heliyon
 <br> Japanese Journal of Applied Physics
 <br> 日本計算工学会論文集
+<br> Journal of Sound and Vibration
 <br>
 
 <br>
