--- a/publications.html
+++ b/publications.html
@@ -69,15 +69,15 @@
 	<br>	
 	<ol>
 	  <li>
-	    Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
-	    A topology optimization of open acoustic waveguides based on a scattering matrix method,<br>
-	    Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
-	  </li>
-	  <br>
-	  <li>
 	    Honshuku Y. and <b>Isakari H.</b><br>
 	    A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br>
 	    Applied Mathematical Modelling, Vol. 110, pp. 819-840, 2022, <a href="https://doi.org/10.1016/j.apm.2022.06.020">doi:10.1016/j.apm.2022.06.020</a>, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
+	  </li>
+	  <br>
+	  <li>
+	    Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
+	    A topology optimization of open acoustic waveguides based on a scattering matrix method,<br>
+	    Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
 	  </li>
 	  <br>
 	  <li>
@@ -102,6 +102,14 @@
 	</ol>
 	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日.
+	<br>本宿裕太, 飯盛浩司
+	<br>遠方場係数の有理多項式近似に基づく周期散乱構造のトポロジー最適化について
+	<br>
+	<br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日.
+	<br>丸山意生, 飯盛浩司
+	<br>ガウス関数によって重み付けされた周波数応答予測に基づく広帯域デバイスのトポロジー最適化
+	<br>
 	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
 	<br>飯盛浩司
 	<br>scattering frequencyのトポロジー感度の境界積分表現
