--- a/isakari.html
+++ b/isakari.html
@@ -58,8 +58,8 @@
 	<p><img src="images/me2.JPG" alt="" width="260" class="alignleft size-full wp-image-210">
 	  <br><br><br> 飯盛浩司 <br> Hiroshi Isakari</p><br>
 	<p>慶應義塾大学理工学部システムデザイン工学科 <br> Dept. of Sys. Desg. Eng., Faculty of Sci. and Tech., Keio Univ.</p>
-        <p>専任講師 <br> assistant professor </p><br>
-        <p> Hiroshi Isakari was born in Saga, Japan on the 27th September 1984. He received, from Kyoto University, his doctoral degree of engineering for "Periodic FMMs and Calderon's preconditioning in acoustics and elastodynamics" in 2012. After that, he experienced one-month  post-doc at graduate school of informatics, Kyoto University, and then got a faculty position at Nagoya University, where he spent 9 years as an assistant professor. He then moved to Keio University. His main research interests lie in computational mechanics. He especially focuses on realising advanced (=fast, reliable, and versatile) numerical methods based on boundary integral equations, and exploring its applications to "optimal" design of novel wave devices such as phononic structures, acoustic metamaterials, and so on.</p>
+        <p>准教授 <br> associate professor </p><br>
+        <p> Hiroshi Isakari was born in Saga, Japan in 1984. He received, from Kyoto University, his doctoral degree in engineering for "Periodic FMMs and Calderon's preconditioning in acoustics and elastodynamics" in 2012. After that, he experienced a one-month post-doc at the graduate school of informatics, Kyoto University, and then got a faculty position at Nagoya University, where he spent 9 years as an assistant professor. He then moved to Keio University in 2021 and was promoted to associate professor in 2023. His main research interests lie in computational mechanics. He especially focuses on realising advanced (=fast, reliable, and versatile) numerical methods based on boundary integral equations, and exploring their applications to the "optimal" design of novel wave devices such as phononic structures, acoustic metamaterials, and so on.</p>
 	<br clear="all" /></p><br>
 <h3 class="heading">学歴</h3>
 <table>
@@ -101,7 +101,11 @@
     <td>名古屋大学大学院 工学研究科 機械理工学専攻 助教</td>
   </tr>
   <tr>
-    <td>2021年(令和3年)4月1日-現在</td>
+    <td>2021年(令和3年)4月1日-2023年(令和5年)3月31日</td>
+    <td>慶應義塾大学 理工学部 システムデザイン工学科 専任講師</td>
+  </tr>
+  <tr>
+    <td>2023年(令和5年)4月1日-</td>
     <td>現職</td>
   </tr>
 </table>
@@ -141,6 +145,9 @@
   </tr>
   <tr>
     <td> 科学研究費補助金(萌芽, <b>代表</b>), グリーン関数の求まらない形状の領域における境界要素法, 2021年7月-2023年3月, 課題番号: 21K9764</td>
+  </tr>
+  <tr>
+    <td> 科学研究費補助金(基盤B, <b>代表</b>), 無限領域における波動散乱問題の解の高階周波数微分とその応用, 2023年4月-2027年3月, 課題番号: 23H03413</td>
   </tr>
 </table>
 <br>
@@ -234,7 +241,15 @@
     </tr>
     <tr>
       <td width="280"> 2022年(令和4年)-現在</td>
-      <td> 電気学会A部門編修委員 </td>
+      <td> 電気学会A部門 編修委員 </td>
+    </tr>
+    <tr>
+      <td width="280"> 2023年(令和5年)-現在</td>
+      <td> 機械学会計算力学部門 運営委員会 委員 </td>
+    </tr>
+    <tr>
+      <td width="280"> 2023年(令和5年)-現在</td>
+      <td> 機械学会計算力学部門 若手シンポジウム担当委員会 幹事 </td>
     </tr>
 </table>
 <br>
