--- a/publications.html
+++ b/publications.html
@@ -102,6 +102,14 @@
 	</ol>
 	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日.
+	<br>利光陸, 飯盛浩司
+	<br>2次元半無限空間におけるGreen関数を用いない間接型境界要素法による波動散乱解析
+	<br>
+	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日.
+	<br>本宿裕太, 飯盛浩司
+	<br>2次元1周期構造によるスカラー波動散乱場のfast frequency sweepについて
+	<br>
 	<br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日.
 	<br>本宿裕太, 飯盛浩司
 	<br>遠方場係数の有理多項式近似に基づく周期散乱構造のトポロジー最適化について
