--- a/members.html
+++ b/members.html
@@ -54,20 +54,33 @@
 	<h3 class="heading"> 現在のメンバー <br>Current members</h3>
 	<br>
 	<b>教員</b>
-	<br> <a href="isakari.html">飯盛浩司</a>
+	<br> <a href="isakari.html">飯盛浩司</a><br>
 	<br>
-	<br><b>M2</b><br>
-	(名大) 本宿裕太<br>
-	(名大) 中嶋利名<br>
-	<br><b>B4</b><br>
+	<b>M1</b>
+	<br>
 	利光陸<br>
 	井上友<br>
 	吉規晃弘<br>
-	宮澤圭<br>
+	<br>
+	<b>B4</b>
+	<br>
+	安部貴心<br>
+	内田幸太郎<br>
+	小谷晴<br>
+	友安恵吾<br>
+	中野悠哉<br>
+	神田陽向<br>
 	<br>
 	<h3 class="heading"> 過去のメンバー <br>Alumni </h3>
 	<br>
 	<ol>
+	  <b>2022年度M修了(名大)</b><br>
+	  本宿裕太<br>
+	  中嶋利名<br>
+	  <br>
+	  <b>2022年度B卒業</b><br>
+	  宮澤圭<br>
+	  <br>
 	  <b>2021年度D修了(名大)</b><br>
 	  <a href="https://k-matsushima-19.github.io">松島慶</a><br>
 	  Qin Jincheng<br>
