lecture and contact

--- a/lecture.html
+++ b/lecture.html
@@ -52,32 +52,40 @@
     <div id="wrapper">
       <section class="content">
 	<h3 class="heading"> 学部 <br> Undergraduate courses</h3>
+	<p> <b>工学材料</b> </p>
+	2022--present <br>
+	理工学部システムデザイン工学科 2年秋 (担当: 5回/全15回) <br><br>
+
 	<p> <b>力学的アナリシス</b> </p>
 	2021--present <br>
-	理工学部システムデザイン工学科 2年秋<br><br>
+	理工学部システムデザイン工学科 2年秋 (担当: 8回/全15回) <br><br>
 	
 	<p> <b>力学的シンセシス</b> </p>
 	2021--present <br>
-	理工学部システムデザイン工学科 3年春<br><br>
+	理工学部システムデザイン工学科 3年春 (担当: 15回/全15回) <br><br>
+
+	<p> <b>複雑システムのシミュレーション</b> </p>
+	2023--present <br>
+	理工学部システムデザイン工学科 3年春 (担当: 5回/全15回) <br><br>
 	
 	<p> <b>理工学基礎実験A</b> </p>
 	2021--present <br>
 	理工学部 2年春/秋<br>
-	(春) 応力およびひずみの測定<br>
-	(秋) 金属の切削<br>
-	(秋) 応力およびひずみの測定<br><br>
+	(春) 応力およびひずみの測定 (担当: 15回/全15回) <br>
+	(秋) 金属の切削 (担当: 8回/全15回) <br>
+	<br>
 	
 	<h3 class="heading"> 大学院 <br> Graduate courses</h3>
 
 	<p> <b>計算固体力学入門</b> </p>
 	2021--present <br>
-	理工学研究科 開放環境科学専攻 空間・環境デザイン工学専修<br>
+	理工学研究科 開放環境科学専攻 空間・環境デザイン工学専修 (担当: 15回/全15回, 隔年(奇数年)開講)<br>
 	Note: This course is taught in English.
 	<br><br>
 
 	<p> <b>空間・環境デザイン工学特別講義第１</b> </p>
 	2021--present <br>
-	理工学研究科 開放環境科学専攻 空間・環境デザイン工学専修<br>
+	理工学研究科 開放環境科学専攻 空間・環境デザイン工学専修 (担当: 1回/全15回)<br>
 	
       </section>
     </div>
