--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       <section class="content">
 	<h3 class="heading"> 連絡先 <br> Contacts</h3>
 	<p> 慶應義塾大学 理工学部 システムデザイン工学科 </p>
-	<p> 矢上キャンパス 25-219 (教員居室), 25-224 (学生居室)</p>
+	<p> 矢上キャンパス 25-209 (教員居室), 25-219 & 25-224 (学生居室)</p>
 	<p> mail: isakari _at_ sd.keio.ac.jp </p>
 
 	<!-- <h3 class="heading"> アクセス <br> Directions </h3> -->
