--- a/publications.html
+++ b/publications.html
@@ -54,17 +54,17 @@
     <div id="wrapper">
       <section class="content">
 	<h3 class="heading"> <b>最近の業績</b> <br> <b>Recent publications</b> </h3>
-        <!-- <br> -->
-	<!-- <h2 class="heading"> <b>プレプリント</b> <br> <b>Preprints</b> </h2> -->
-	<!-- <br> -->
-	<!-- <ol> -->
-	  <!-- <li> -->
-	  <!--   Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br> -->
-	  <!--   A topology optimization of open acoustic waveguides based on a scattering matrix method,<br> -->
-	  <!--   2022, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a> -->
-	  <!-- </li> -->
-	<!-- </ol> -->
-        <!-- <br> -->
+        <br>
+	<h2 class="heading"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
+	<br>
+	<ol>
+	  <li>
+	    Honshuku Y. and <b>Isakari H.</b><br>
+	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
+	    2023, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
+	  </li>
+	</ol>
+        <br>
 	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
 	<br>	
 	<ol>
