--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,12 @@
 	<br>
 	<ol>
 	  <li>
+	    Toshimitsu R. and <b>Isakari H.</b><br>
+	    A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
+	    2023, <a href="https://arxiv.org/abs/2305.15815">arXiv:2305.15815</a>.
+	  </li>
+	  <br>
+	  <li>
 	    Honshuku Y. and <b>Isakari H.</b><br>
 	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
 	    2023, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
